<resources>
    <string name="app_name">抢红包</string>
    <string name="service_WeChat_status">当前微信辅助服务状态:</string>
    <string name="service_WeChat_name">设置微信抢红包辅助服务</string>
    <string name="service_QQ_status">当前QQ辅助服务状态:</string>
    <string name="service_QQ_name">设置QQ抢红包辅助服务</string>
    <string name="service_ofo_status">当前OFO辅助服务状态:</string>
    <string name="service_ofo_name">设置监听OFO辅助服务</string>

    <string name="service_A_live_name">一直播辅助服务状态:</string>
    <string name="service_A_live_status">设置监听一直播辅助服务</string>



    <string name="service_dingding_status">当前钉钉辅助服务状态:</string>
    <string name="service_dingding_name">设置钉钉抢红包辅助服务</string>
    <string name="Listening_to_the_notification_bar">监听通知栏状态</string>
    <string name="service_notification_status">当前通知栏辅助服务状态:</string>
    <string name="start_vpn">Start VPN</string>
    <string name="stop_vpn">Stop from Notification Bar</string>
    <string name="action_settings">Settings</string>

    <string name="Open_after_XiaoKa">开启之后一直播可以自动发消息</string>
    <string name="Open_after_WeChat">开启之后微信无需手动抢红包</string>
    <string name="Open_after_QQ">开启之后QQ无需手动抢红包</string>
    <string name="Open_after_ofo">开启之后监听ofo的内容</string>
    <string name="Open_after_ding">开启之后钉钉无需手动抢红包</string>
    <string name="MyAccessibilityService">测试AccessibilityService</string>
    <string name="FloatWindow">打开悬浮按钮</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string><!-- Strings related to login -->
    <string name="prompt_phoneNumber">PhoneNumber</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_eye">EyeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tv_accountPassword">accountPassword</string>
    <string name="tv_account">account</string>
    <string name="submit">提交</string>
    <string name="License_plate_number">车牌号:</string>
    <string name="password">密码:</string>
    <string name="text_open">打开</string>
    <string name="text_scan_qr_code">扫码页</string>
    <string name="text_go_back">返回</string>
    <string name="text_cancel">取消</string>
    <string name="tv_text_hint">提示</string>
    <string name="tv_text_content">内容</string>
    <string name="open_the_other_app">打开其他app</string>
    <string name="text_photo">相册</string>
    <string name="open">打开</string>


    <string name="toAlbum">从相册选择图片</string>
    <string name="photograph">拍照</string>
    <string name="bigimage">查看大图</string>
    <string name="cancel">取消</string>


    <string name="refresh_interface">刷新界面</string>
    <string name="return_home">返回首页</string>
    <string name="DesktopView">创建一直播辅助桌面</string>


</resources>
