<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_top_selecetor"
            android:gravity="center"
            android:minHeight="52dp"
            android:text="@string/toAlbum"
            android:textColor="@color/text_color_light_black"
            android:textSize="@dimen/text_pic_title"/>
        <TextView
            android:id="@+id/tvPhotograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_mid_selector"
            android:gravity="center"
            android:minHeight="52dp"
            android:text="@string/photograph"
            android:textColor="@color/text_color_light_black"
            android:textSize="@dimen/text_pic_title"/>
        <TextView
            android:id="@+id/bigImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_bottom_selecetor"
            android:gravity="center"
            android:minHeight="52dp"
            android:text="@string/bigimage"
            android:textColor="@color/text_color_light_black"
            android:textSize="@dimen/text_pic_title"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/background_subject"/>
        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_selector"
            android:gravity="center"
            android:minHeight="52dp"
            android:text="@string/cancel"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/text_pic_title"/>

    </LinearLayout>

