<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fl_capture"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <com.liuwei1995.red.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/home_relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/header_bg">

            <TextView
                android:id="@+id/tv_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@color/header_bg"
                android:text="@string/text_go_back"
                android:textColor="@color/text_color_white"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/header_bg"
                android:text="@string/text_scan_qr_code"
                android:textColor="@color/text_color_white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_camera_switch"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/header_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_open"
                android:textColor="@color/text_color_white"
                android:textSize="15sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/text_cancel"
                android:textColor="@color/text_color_red"
                android:textSize="15sp"
                android:textStyle="normal"/>
            <!--相册-->
            <Button
                android:id="@+id/btn_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/text_photo"
                android:textColor="@color/text_color_red"
                android:textSize="15sp"
                android:textStyle="normal"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>